--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="converter">Converter</string>
     <string name="from">From</string>
     <string name="to">To</string>
-    <string name="amount">Amount</string>
+    <string name="amount">Enter amount</string>
     <string name="result">Result</string>
     <string name="converted_value">100</string>
     <string name="tagline">Convert your currency now!</string>
