--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Converter</string>
     <string name="home">Home</string>
     <string name="rates">Rates</string>
-    <string name="about">About</string>
+    <string name="history">History</string>
     <string name="currency">Currency</string>
     <string name="currency_hint">USD</string>
     <string name="refresh">refresh</string>
